# cfvc

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  TAGS  cfvc.cabal  cfvc.nix  default.nix  result  shell.nix
examples/: config.yaml
src/: Main.hs
src/App/: CFVC.hs
src/App/CFVC/: Config.hs  Types.hs
src/App/CFVC/Config/: CLI.hs  Parsers.hs  Time.hs  Types.hs  Yaml.hs
src/Network/CFClient/: Client.hs  Constants.hs  Parsers.hs  Types.hs
src/Network/Hequests/: Request.hs  Simple.hs  Types.hs
src/Network/VJClient/: API.hs  Client.hs  Constants.hs  Parsers.hs  ToJSON.hs  Types.hs
