name: cfvc
version: 1.0.0
license: BSD3
cabal-version: >= 1.18
build-type: Simple

executable cfvc
    build-depends: base < 5
                 , random
                 , mtl
                 , containers
                 , lens
                 , http-conduit
                 , bytestring
                 , case-insensitive
                 , attoparsec
                 , word8
                 , time
                 , optparse-applicative
                 , yaml
                 , directory
                 , pretty-simple
                 , raw-strings-qq
    other-modules: Network.Hequests.Request
                 , Network.Hequests.Types
                 , Network.Hequests.Simple
                 , Network.VJClient.Types
                 , Network.VJClient.Client
                 , Network.VJClient.Constants
                 , Network.VJClient.API
                 , Network.VJClient.Parsers
                 , Network.VJClient.ToJSON
                 , Network.CFClient.Client
                 , Network.CFClient.Constants
                 , Network.CFClient.Types
                 , Network.CFClient.Parsers
                 , App.CFVC.Config.Yaml
                 , App.CFVC.Config.CLI
                 , App.CFVC.Config.Types
                 , App.CFVC.Config.Parsers
                 , App.CFVC.Config.Time
                 , App.CFVC.Config
                 , App.CFVC.Types
                 , App.CFVC
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
